==> kzsolt87/uCNC/uCNC/src/hal/mcus/esp32/mcu_esp32.c <==
#include "../../../cnc.h"
#include "esp_timer.h"
#include "esp_task_wdt.h"
#include "esp_ipc.h"
#include "driver/uart.h"
#include "driver/timer.h"
#include "soc/i2s_struct.h"
#include "driver/i2c.h"
#include "hal/spi_types.h"
#include "driver/spi_master.h"
#include <string.h>
#include <stdbool.h>
#include <stdint.h>
#include <math.h>
#define FLASH_EEPROM_SIZE 1024
#include <nvs.h>
#include <esp_partition.h>
#include "driver/i2s.h"

void mcu_init(void)
{
#if (defined(LIMIT_X_ISR) || defined(LIMIT_Y_ISR) || defined(LIMIT_Z_ISR) || defined(LIMIT_X2_ISR) || defined(LIMIT_Y2_ISR) || defined(LIMIT_Z2_ISR) || defined(LIMIT_A_ISR) || defined(LIMIT_B_ISR) || defined(LIMIT_C_ISR) || defined(PROBE_ISR) || defined(ESTOP_ISR) || defined(SAFETY_DOOR_ISR) || defined(FHOLD_ISR) || defined(CS_RES_ISR) || defined(DIN0_ISR) || defined(DIN1_ISR) || defined(DIN2_ISR) || defined(DIN3_ISR) || defined(DIN4_ISR) || defined(DIN5_ISR) || defined(DIN6_ISR) || defined(DIN7_ISR))
	gpio_install_isr_service(0);
#endif

	mcu_io_init();

	// starts EEPROM before UART to enable WiFi and BT settings
#if !defined(RAM_ONLY_SETTINGS) && !defined(USE_ARDUINO_EEPROM_LIBRARY)
	// esp32_eeprom_init(FLASH_EEPROM_SIZE); // 1K Emulated EEPROM

	// starts nvs
	mcu_eeprom.size = 0;
	memset(mcu_eeprom.data, 0, FLASH_EEPROM_SIZE);
	if (nvs_open("eeprom", NVS_READWRITE, &mcu_eeprom.nvs_handle) == ESP_OK)
	{
		// determines the maximum sector size of NVS that can be read/write
		nvs_get_blob(mcu_eeprom.nvs_handle, "eeprom", NULL, &mcu_eeprom.size);
		if (FLASH_EEPROM_SIZE > mcu_eeprom.size)
		{
			log_e("eeprom does not have enough space");
			mcu_eeprom.size = 0;
		}

		nvs_get_blob(mcu_eeprom.nvs_handle, "eeprom", mcu_eeprom.data, &mcu_eeprom.size);
	}
	else
	{
		log_e("eeprom failed to open");
	}
#else
	extern void esp32_eeprom_init(int size);
	esp32_eeprom_init(FLASH_EEPROM_SIZE);
#endif

#ifdef MCU_HAS_UART
	// initialize UART
	const uart_config_t uartconfig = {
		.baud_rate = BAUDRATE,
		.data_bits = UART_DATA_8_BITS,
		.parity = UART_PARITY_DISABLE,
		.stop_bits = UART_STOP_BITS_1,
		.flow_ctrl = UART_HW_FLOWCTRL_DISABLE,
		.source_clk = UART_SCLK_APB};
	// We won't use a buffer for sending data.
	uart_param_config(UART_PORT, &uartconfig);
	uart_set_pin(UART_PORT, TX_BIT, RX_BIT, UART_PIN_NO_CHANGE, UART_PIN_NO_CHANGE);
#endif

#ifdef MCU_HAS_UART2
	// initialize UART
	const uart_config_t uart2config = {
		.baud_rate = BAUDRATE2,
		.data_bits = UART_DATA_8_BITS,
		.parity = UART_PARITY_DISABLE,
		.stop_bits = UART_STOP_BITS_1,
		.flow_ctrl = UART_HW_FLOWCTRL_DISABLE,
		.source_clk = UART_SCLK_APB};
	// We won't use a buffer for sending data.
	uart_param_config(UART2_PORT, &uart2config);
	uart_set_pin(UART2_PORT, TX2_BIT, RX2_BIT, UART_PIN_NO_CHANGE, UART_PIN_NO_CHANGE);
#endif

#ifdef IC74HC595_CUSTOM_SHIFT_IO
	esp32_i2s_extender_init();
#endif

#ifdef IC74HC595_HAS_PWMS
	/* Select and initialize basic parameters of the timer */
	timer_config_t pwmconfig = {0};
	pwmconfig.divider = getApbFrequency() / 640000UL; // 1.5625us per pulse
	pwmconfig.counter_dir = TIMER_COUNT_UP;
	pwmconfig.counter_en = TIMER_PAUSE;
	pwmconfig.intr_type = TIMER_INTR_MAX;
	pwmconfig.alarm_en = TIMER_ALARM_EN;
	pwmconfig.auto_reload = true;
	timer_init(SERVO_TIMER_TG, SERVO_TIMER_IDX, &pwmconfig);

	/* Timer's counter will initially start from value below.
	   Also, if auto_reload is set, this value will be automatically reload on alarm */
	timer_set_counter_value(SERVO_TIMER_TG, SERVO_TIMER_IDX, 0x00000000ULL);
	/* Configure the alarm value and the interrupt on alarm. */
	timer_set_alarm_value(SERVO_TIMER_TG, SERVO_TIMER_IDX, (uint64_t)5);
	// register PWM isr
	timer_isr_register(SERVO_TIMER_TG, SERVO_TIMER_IDX, esp32_io_updater, NULL, 0, NULL);
	timer_enable_intr(SERVO_TIMER_TG, SERVO_TIMER_IDX);
	timer_start(SERVO_TIMER_TG, SERVO_TIMER_IDX);
#endif

	// inititialize ITP timer
	timer_config_t itpconfig = {0};
	itpconfig.divider = getApbFrequency() / 1000000UL; // 1us per pulse
	itpconfig.counter_dir = TIMER_COUNT_UP;
	itpconfig.counter_en = TIMER_PAUSE;
	itpconfig.intr_type = TIMER_INTR_MAX;
	itpconfig.alarm_en = TIMER_ALARM_EN;
	itpconfig.auto_reload = true;
	timer_init(ITP_TIMER_TG, ITP_TIMER_IDX, &itpconfig);

	// initialize rtc timer (currently on core 1)
	xTaskCreatePinnedToCore(mcu_rtc_task, "rtcTask", 1024, NULL, 7, NULL, CONFIG_ARDUINO_RUNNING_CORE);

	// launches isr tasks that will run on core 0
	// currently it's running PWM and UART on core 0
	// Arduino Bluetooth also runs on core 0
	// Arduino WiFi ???
	esp_ipc_call_blocking(0, mcu_core0_tasks_init, NULL);

#ifdef MCU_HAS_SPI
	spi_bus_config_t spiconf = {
		.miso_io_num = SPI_SDI_BIT,
		.mosi_io_num = SPI_SDO_BIT,
		.sclk_io_num = SPI_CLK_BIT,
		.quadwp_io_num = -1,
		.quadhd_io_num = -1,
		.data4_io_num = -1,
		.data5_io_num = -1,
		.data6_io_num = -1,
		.data7_io_num = -1,
		.max_transfer_sz = SOC_SPI_MAXIMUM_BUFFER_SIZE,
		.flags = 0,
		.intr_flags = 0};
	// Initialize the SPI bus
	spi_bus_initialize(SPI_PORT, &spiconf, SPI_DMA_DISABLED);
	mcu_spi_config(SPI_MODE, SPI_FREQ);
#endif

#ifdef MCU_HAS_I2C
	mcu_i2c_config(I2C_FREQ);
#endif

#ifdef MCU_HAS_WIFI
	esp32_wifi_init();
#endif
#ifdef MCU_HAS_BLUETOOTH
	esp32_bt_init();
#endif
	mcu_enable_global_isr();
}

void mcu_start_itp_isr(uint16_t ticks, uint16_t prescaller)
{
	if (!mcu_itp_timer_running)
	{
		/* Timer's counter will initially start from value below.
		   Also, if auto_reload is set, this value will be automatically reload on alarm */
		timer_set_counter_value(ITP_TIMER_TG, ITP_TIMER_IDX, 0x00000000ULL);

		/* Configure the alarm value and the interrupt on alarm. */
		timer_set_alarm_value(ITP_TIMER_TG, ITP_TIMER_IDX, (uint64_t)ticks * prescaller);
		timer_enable_intr(ITP_TIMER_TG, ITP_TIMER_IDX);
		timer_isr_register(ITP_TIMER_TG, ITP_TIMER_IDX, mcu_itp_isr, NULL, 0, NULL);

		timer_start(ITP_TIMER_TG, ITP_TIMER_IDX);
		mcu_itp_timer_running = true;
	}
	else
	{
		mcu_change_itp_isr(ticks, prescaller);
	}
}

void mcu_change_itp_isr(uint16_t ticks, uint16_t prescaller)
{
	if (mcu_itp_timer_running)
	{
		timer_pause(ITP_TIMER_TG, ITP_TIMER_IDX);
		timer_set_alarm_value(ITP_TIMER_TG, ITP_TIMER_IDX, (uint64_t)ticks * prescaller);
		timer_start(ITP_TIMER_TG, ITP_TIMER_IDX);
	}
	else
	{
		mcu_start_itp_isr(ticks, prescaller);
	}
}

void mcu_stop_itp_isr(void)
{
	if (mcu_itp_timer_running)
	{
		timer_pause(ITP_TIMER_TG, ITP_TIMER_IDX);
		timer_disable_intr(ITP_TIMER_TG, ITP_TIMER_IDX);
		mcu_itp_timer_running = false;
	}
}

uint8_t mcu_eeprom_getc(uint16_t address)
{
#ifndef RAM_ONLY_SETTINGS
	// return esp32_eeprom_read(address);
	size_t size = mcu_eeprom.size;
	if (size)
	{
		return mcu_eeprom.data[address];
	}
#endif
	return 0;
}

void mcu_eeprom_putc(uint16_t address, uint8_t value)
{
#ifndef RAM_ONLY_SETTINGS
	// esp32_eeprom_write(address, value);
	size_t size = mcu_eeprom.size;
	if (size)
	{
		mcu_eeprom.dirty |= (mcu_eeprom.data[address] != value);
		mcu_eeprom.data[address] = value;
	}
#endif
}

void mcu_config_timeout(mcu_timeout_delgate fp, uint32_t timeout)
{
	mcu_timeout_cb = fp;
	timer_config_t config = {0};
	config.divider = getApbFrequency() / 1000000UL; // 1us per count
	config.counter_dir = TIMER_COUNT_UP;
	config.counter_en = TIMER_PAUSE;
	config.alarm_en = TIMER_ALARM_EN;
	config.auto_reload = true;
	timer_init(ONESHOT_TIMER_TG, ONESHOT_TIMER_IDX, &config);

	/* Timer's counter will initially start from value below.
	   Also, if auto_reload is set, this value will be automatically reload on alarm */
	timer_set_counter_value(ONESHOT_TIMER_TG, ONESHOT_TIMER_IDX, 0x00000000ULL);

	/* Configure the alarm value and the interrupt on alarm. */
	timer_set_alarm_value(ONESHOT_TIMER_TG, ONESHOT_TIMER_IDX, (uint64_t)timeout);
	timer_enable_intr(ONESHOT_TIMER_TG, ONESHOT_TIMER_IDX);
	timer_isr_register(ONESHOT_TIMER_TG, ONESHOT_TIMER_IDX, mcu_oneshot_isr, NULL, 0, NULL);
}

uint8_t mcu_spi_xmit(uint8_t data)
{
	uint8_t rxdata = 0xFF;
	spi_transaction_t spi_trans = {0};
	spi_trans.length = 8; // Number of bits NOT number of bytes.
	spi_trans.tx_buffer = &data;
	spi_trans.rx_buffer = &rxdata;

	spi_device_transmit(mcu_spi_handle, &spi_trans);

	return rxdata;
}

void mcu_spi_config(uint8_t mode, uint32_t frequency)
{
	spi_bus_remove_device(mcu_spi_handle);
	spi_device_interface_config_t mcu_spi_conf = {0};
	mcu_spi_conf.clock_speed_hz = frequency;
	mcu_spi_conf.spics_io_num = -1;
	mcu_spi_conf.queue_size = 1;

	spi_bus_add_device(SPI_PORT, &mcu_spi_conf, &mcu_spi_handle);
}
